--- a/frontend/src/app/homepage/homepage.component.scss
+++ b/frontend/src/app/homepage/homepage.component.scss
@@ -1,9 +1,52 @@
-.spacer {
-  flex: 1 1 auto;
-}
-.logo {
-  margin-right: 10px;
-}
-.logoutButton {
-  color: red;
+.main {
+  overflow: hidden;
+  display: flex;
+  height: calc(100vh - 64px);
+  &__page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &Text {
+      font-size: 2em;
+      padding: 20px;
+      max-width: 80%;
+      text-align: center;
+    }
+    &Button {
+      border: 3px solid black;
+      font-size: 1.5em;
+      padding: 15px 70px;
+      background: none;
+      color: black;
+      transition: 0.5s;
+      &:hover {
+        cursor: pointer;
+        background-color: black;
+        color: white;
+      }
+    }
+
+    &Quote {
+      padding-top: 150px;
+      max-width: 80%;
+      font-size: 1.3em;
+      text-align: center;
+      margin-bottom: 150px;
+    }
+
+    &Photo {
+      width: 100%;
+      height: 100%;
+    }
+
+    &--left {
+      width: 50%;
+    }
+    &--right {
+      width: 50%;
+      color: black;
+      justify-content: space-between;
+    }
+  }
 }
