--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -1,1 +1,22 @@
-<p>nav works!</p>
+<mat-toolbar color="primary" class="navbar">
+    <mat-icon class="logo">groups</mat-icon>
+    <span>Meet2Gether</span>
+    <span class="spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+            <mat-icon>settings</mat-icon>
+            <span>Settings</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>mail</mat-icon>
+            <span>Contact</span>
+        </button>
+        <button mat-menu-item class="logoutButton">
+            <mat-icon [ngStyle]="{'color': 'red'}">logout</mat-icon>
+            <span>Logout</span>
+        </button>
+    </mat-menu>
+</mat-toolbar>
