Change homepage view and add nav buttons

--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -1,7 +1,12 @@
 <mat-toolbar color="primary" class="navbar">
-    <mat-icon class="logo">groups</mat-icon>
-    <span>Meet2Gether</span>
-    <span class="spacer"></span>
+    <div class="logoContainer">
+        <mat-icon class="logo">groups</mat-icon>
+        <span>Meet2Gether</span>
+    </div>
+    <div>
+        <button mat-button>Utwórz event</button>
+        <button mat-button>Szukaj eventu</button>
+    </div>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>menu</mat-icon>
     </button>
