Prepare search events view

--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,1 +1,14 @@
-<p>events works!</p>
+<div class="search-container">
+    <mat-form-field appearance="fill">
+        <mat-label>Wyszukaj</mat-label>
+        <input matInput placeholder="Wpisz szukaną frazę">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Wybierz kategorię</mat-label>
+        <mat-select>
+            <mat-option value="kat1">Kategoria 1</mat-option>
+            <mat-option value="kat2">Kategoria 2</mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
