--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -12,3 +12,20 @@
         </mat-select>
     </mat-form-field>
 </div>
+<div class="events-list">
+    <mat-card *ngFor="let event of mockEventy" class="event-card">
+        <div class="card-content">
+            <div class="card-image">
+                <img [src]="event.imageUrl" alt="{{ event.nazwa }}">
+            </div>
+            <div class="card-details">
+                <mat-card-header>
+                    <mat-card-title>{{ event.nazwa }}</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <p>{{ event.opis }}</p>
+                </mat-card-content>
+            </div>
+        </div>
+    </mat-card>
+</div>
