--- a/frontend/src/app/events/events.component.scss
+++ b/frontend/src/app/events/events.component.scss
@@ -14,3 +14,39 @@
     width: 100%;
   }
 }
+.events-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+
+  .event-card {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    width: 80%;
+    max-width: 600px;
+
+    .card-content {
+      display: flex;
+      flex-grow: 1;
+
+      .card-image {
+        flex-basis: 20%;
+        img {
+          max-width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .card-details {
+        flex-basis: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    }
+  }
+}
