--- a/frontend/src/app/events/events.component.scss
+++ b/frontend/src/app/events/events.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 10px;
   padding: 20px;
-  max-width: 600px;
+  max-width: 90%;
   margin: auto;
 
   @media (min-width: 600px) {
@@ -26,7 +26,7 @@
     flex-direction: row;
     align-items: stretch;
     width: 80%;
-    max-width: 600px;
+    max-width: 90%;
 
     .card-content {
       display: flex;
@@ -49,4 +49,9 @@
       }
     }
   }
+}
+
+.mat-icon {
+  cursor: pointer;
+  color: #666;
 }
