Create new component and add navigation

--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -4,8 +4,8 @@
         <span>Meet2Gether</span>
     </div>
     <div>
-        <button mat-button>Utwórz event</button>
-        <button mat-button>Szukaj eventu</button>
+        <button mat-button routerLink="/create">Utwórz event</button>
+        <button mat-button routerLink="/home">Szukaj eventu</button>
     </div>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>menu</mat-icon>
