--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,19 +1,26 @@
-<div class="login">
-    <h1>Log in</h1>
-    <mat-form-field>
+<div class="registration" [formGroup]="loginForm">
+    <h1>Login</h1>
+    <mat-form-field appearance="fill">
         <mat-label>Nickname</mat-label>
-        <input matInput>
+        <input matInput formControlName="username">
+
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label appearance="fill">Email</mat-label>
+        <input matInput formControlName="email" type="email">
+
     </mat-form-field>
     <mat-form-field>
         <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'">
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
+
     </mat-form-field>
     <div class="buttons">
-        <button mat-raised-button color="primary" routerLink="/home" (click)="sayHello()">Log in</button>
+        <button mat-raised-button color="primary" routerLink="/home">Log in</button>
         <button mat-raised-button color="primary" routerLink="/registration">Sign up</button>
     </div>
 </div>
