--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,19 +1,26 @@
-<div class="registration">
+<div class="registration" [formGroup]="registerForm">
     <h1>Registration</h1>
-    <mat-form-field>
+    <mat-form-field appearance="fill">
         <mat-label>Nickname</mat-label>
-        <input matInput>
+        <input matInput formControlName="username">
+
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label appearance="fill">Email</mat-label>
+        <input matInput formControlName="email" type="email">
+
     </mat-form-field>
     <mat-form-field>
         <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'">
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
+
     </mat-form-field>
     <div class="buttons">
         <button mat-raised-button color="primary" routerLink="/login">Back to login</button>
-        <button mat-raised-button color="primary">Sign up</button>
+        <button mat-raised-button color="primary" (click)="submit()">Sign up</button>
     </div>
 </div>
