Change logic for login and register

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -20,7 +20,7 @@
 
     </mat-form-field>
     <div class="buttons">
-        <button mat-raised-button color="primary" routerLink="/home">Log in</button>
+        <button mat-raised-button color="primary" (click)="submit()">Log in</button>
         <button mat-raised-button color="primary" routerLink="/registration">Sign up</button>
     </div>
 </div>
