--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -11,17 +11,17 @@
         <mat-icon>menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>
+        <button mat-menu-item disabled="true">
             <mat-icon>settings</mat-icon>
             <span>Settings</span>
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item disabled="true">
             <mat-icon>mail</mat-icon>
             <span>Contact</span>
         </button>
-        <button mat-menu-item class="logoutButton">
+        <button mat-menu-item class="logoutButton" (click)="logout()">
             <mat-icon [ngStyle]="{'color': 'red'}">logout</mat-icon>
-            <span>Logout</span>
+            <span>Wyloguj się</span>
         </button>
     </mat-menu>
 </mat-toolbar>
