Add new categories and update filter logic

--- a/frontend/src/app/error-page/error-page.component.html
+++ b/frontend/src/app/error-page/error-page.component.html
@@ -1,1 +1,3 @@
-<p>error-page works!</p>
+<h1>ERROR - 404! Strona nie została odnaleziona!</h1>
+<p>Podany adres nie istnieje 🫤</p>
+<p class="info">Wróc do <span class="link" (click)="back()">strony głównej</span></p>
